Changes
=======
Adding automatic install projects into external-apps from 
pypi or custom url

09-Oct-2010: deleting install call where installed mtweet on dist_installer.py
24-Oct-2010: fixing bug adding src directory into sys.path to find module settings (django project)
24-Oct-2010: fixing bug adding src directory into extra-path to generete script to find project into src directory
25-Oct-2010: fixing bug find-link option now into the correct place to install
25-Oct-2010: when creating the project creating templates dir
25-Oct-2010: adding base templates base.html, 404.html, 500.html
25-Oct-2010: updating templates
05-Nov-2010: adding urls into projects and logs directory
07-Nov-2010: fixing sdist package
07-Nov-2010: fixing settings template to load correct url, fixing url into producction
13-Nov-2010: fixing code that crash when changing directory names into local-apps external-apps
25-Feb-2011: moving project/test to project/testing
28-Mar-2011: updating to use django1.3 upload files moved to media and django static is as before #read django-staticfiles
28-Mar-2011: creating src dir if not exists
29-Mar-2011: fixing template urls, it didn't use global url not it does.