@@ -25,10 +25,18 @@ development_settings = '''from %(project)s.settings import *
 
 import os
 
-SITE_ROOT = os.path.dirname(os.path.realpath(__file__))
-
 DEBUG=True
 TEMPLATE_DEBUG=DEBUG
+
+# set this to '' for development it causes problems
+# it is used to collect static files on production mode
+# not necessary here
+STATIC_ROOT = ''
+
+# STATIC_ROOT path should be added in development mode to server those files
+STATICFILES_DIRS += (
+    os.path.join(SITE_ROOT, 'static'),
+)
 
 INSTALLED_APPS += (
     # Uncomment the next line to enable the admin:
@@ -40,14 +48,17 @@ INSTALLED_APPS += (
 ROOT_URLCONF = '%(project)s.project.development.urls'
 '''
 
-development_urls = '''from django.conf.urls.defaults import patterns, include, url
+development_urls = '''from django.conf import settings
+from django.conf.urls.static import static
+from django.conf.urls.defaults import patterns, include, url
 
 from django.contrib.staticfiles.urls import staticfiles_urlpatterns
+
 from %(project)s.urls import urlpatterns
 
 urlpatterns += patterns('',
     #(r'^init/', include('myproject.urls')),
-) + staticfiles_urlpatterns()
+) + staticfiles_urlpatterns() + static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)
 '''
 
 testing_settings = '''
